# YAGE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Release/: CMakeCache.txt  Makefile  cmake_install.cmake  yage
Release/ShishGL/: Makefile  ShishGLTargets.cmake  cmake_install.cmake
Release/ShishGL/src/Core/: Makefile  cmake_install.cmake
Release/ShishGL/src/Core/EventSystem/: Makefile  cmake_install.cmake
Release/ShishGL/src/Core/LogSystem/: Makefile  cmake_install.cmake
Release/ShishGL/src/Core/Primitives/: Makefile  cmake_install.cmake
Release/ShishGL/src/Core/RenderSystem/: Makefile  cmake_install.cmake
Release/ShishGL/src/Core/RenderSystem/GraphicsPlatform/: Makefile  ShishGL-GraphicsPlatform-Targets.cmake  cmake_install.cmake
Release/ShishGL/src/Core/RenderSystem/GraphicsPlatform/Events/: Makefile  cmake_install.cmake
Release/ShishGL/src/Core/RenderSystem/GraphicsPlatform/Input/: Makefile  cmake_install.cmake
Release/ShishGL/src/Core/RenderSystem/SfmlPlatform/: Makefile  cmake_install.cmake
Release/ShishGL/src/Core/ResourceManager/: Makefile  cmake_install.cmake
Release/ShishGL/src/Core/Window/: Makefile  cmake_install.cmake
Release/ShishGL/src/DebugUtilities/: Makefile  cmake_install.cmake
Release/ShishGL/src/GUI/: Makefile  cmake_install.cmake
Release/ShishGL/src/GUI/UIWindow/: Makefile  cmake_install.cmake
Release/ShishGL/src/GUI/UIWindow/Behaviors/: Makefile  cmake_install.cmake
Release/ShishGL/src/GUI/UIWindow/Shapes/: Makefile  cmake_install.cmake
Release/ShishGL/src/GUI/UIWindow/Styles/: Makefile  cmake_install.cmake
Release/ShishGL/tests/: Makefile  TestAbstracts  cmake_install.cmake
Release/src/: Makefile  cmake_install.cmake
Release/src/Backend/: Makefile  cmake_install.cmake
Release/src/Backend/ImageManager/: Makefile  cmake_install.cmake
Release/src/Backend/ToolManager/: Makefile  cmake_install.cmake
Release/src/Backend/ToolManager/Properties/: Makefile  cmake_install.cmake
Release/src/Backend/ToolManager/Tools/: Makefile  cmake_install.cmake
Release/src/ColorUtils/: Makefile  cmake_install.cmake
Release/src/Panels/: Makefile  cmake_install.cmake
assets/: LayoutDumpAfter.dot  ShishGL_log  layout.dot  plug_list.json  subs.dot
assets/587348-photo-editing-tools/eps/: 001-saturation.eps  002-exposure.eps  003-adjustment.eps  004-burn.eps  005-hand.eps  006-red-eye.eps  007-fix.eps  008-flip.eps  009-thermometer.eps  010-paint-bucket.eps  011-pencil.eps  012-paint-brush-1.eps  013-cursor-1.eps  014-patch.eps  015-file.eps  016-ruler.eps  017-dropper.eps  018-mode.eps  019-eraser.eps  020-drop.eps  021-pen.eps  022-text.eps  023-foreground.eps  024-eyedropper.eps  025-zoom.eps  026-stamp.eps  027-band-aid.eps  028-slice.eps  029-magic-wand.eps  030-paint-brush.eps  031-cursor.eps  032-finger.eps  033-rgb.eps  034-grid.eps  035-levels.eps  036-brightness.eps  037-contrast.eps  038-delete.eps  039-crop.eps  040-artboard.eps
assets/587348-photo-editing-tools/font/: Flaticon.eot  _flaticon.scss  flaticon.css  flaticon.html
assets/587348-photo-editing-tools/psd/: 001-saturation.psd  002-exposure.psd  003-adjustment.psd  004-burn.psd  005-hand.psd  006-red-eye.psd  007-fix.psd  008-flip.psd  009-thermometer.psd  010-paint-bucket.psd  011-pencil.psd  012-paint-brush-1.psd  013-cursor-1.psd  014-patch.psd  015-file.psd  016-ruler.psd  017-dropper.psd  018-mode.psd  019-eraser.psd  020-drop.psd  021-pen.psd  022-text.psd  023-foreground.psd  024-eyedropper.psd  025-zoom.psd  026-stamp.psd  027-band-aid.psd  028-slice.psd  029-magic-wand.psd  030-paint-brush.psd  031-cursor.psd  032-finger.psd  033-rgb.psd  034-grid.psd  035-levels.psd  036-brightness.psd  037-contrast.psd  038-delete.psd  039-crop.psd  040-artboard.psd
include/PluginAPI/: api.hpp
include/YAGE/: YAGE.hpp
include/YAGE/Backend/: PluginManager.hpp  SessionManager.hpp
include/YAGE/Backend/ImageManager/: ImageManager.hpp
include/YAGE/Backend/ToolManager/: ToolManager.hpp
include/YAGE/Backend/ToolManager/Properties/: ColorPicker.hpp  DefaultProperties.hpp  IProperty.hpp  NumberPickers.hpp  Stroke.hpp
include/YAGE/Backend/ToolManager/Tools/: Dropper.hpp  Eraser.hpp  Pencil.hpp  Rectangle.hpp  Tool.hpp  Tools.hpp
include/YAGE/ColorUtils/: Convert.hpp
include/YAGE/ImageManager/: Canvas.hpp  ImageManager.hpp
include/YAGE/Panels/: Canvas.hpp  ColorPicker.hpp  LayerList.hpp  LayerSelector.hpp  MainPanels.hpp  PropertyList.hpp  ThicknessPicker.hpp  ToolList.hpp
include/YAGE/Plugins/: PluginManager.hpp
include/YAGE/ToolManager/: Tool.hpp  ToolManager.hpp  ToolSelector.hpp
include/YAGE/ToolManager/Properties/: IProperty.hpp  Stroke.hpp
include/YAGE/ToolManager/Tools/: Brush.hpp  Eraser.hpp  Hand.hpp  Line.hpp  Pencil.hpp  Rectangle.hpp  Tools.hpp  Utils.hpp
plugins/Contrast/: CMakeLists.txt  Contrast.cpp  Contrast.hpp
plugins/UnsharpMask/: CMakeLists.txt  UnsharpMask.cpp  UnsharpMask.hpp
src/: CMakeLists.txt  YAGE.cpp  main.cpp
src/Backend/: CMakeLists.txt  PluginManager.cpp  PluginTool.cpp  SessionManager.cpp
src/Backend/ImageManager/: CMakeLists.txt  ImageManager.cpp
src/Backend/ToolManager/: CMakeLists.txt  ToolManager.cpp
src/Backend/ToolManager/Properties/: CMakeLists.txt  ColorPicker.cpp  DefaultProperties.cpp  Property.cpp  Stroke.cpp
src/Backend/ToolManager/Tools/: CMakeLists.txt  Pencil.cpp
src/ColorUtils/: CMakeLists.txt  Convert.cpp
src/ImageManager/: CMakeLists.txt  Canvas.cpp  ImageManager.cpp
src/Panels/: CMakeLists.txt  Canvas.cpp  ColorPicker.cpp  LayerList.cpp  MainPanels.cpp  ToolList.cpp
src/Plugins/: CMakeLists.txt  PluginManager.cpp
src/ToolManager/: CMakeLists.txt  ToolManager.cpp
src/ToolManager/Properties/: CMakeLists.txt  Stroke.cpp
src/ToolManager/Tools/: CMakeLists.txt  Pencil.cpp
